2001-12-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c (read_dir): make use of new dir functions.
	* directory.c (dir_new, dir_add): new functions.
	* directory.h (struct directory): add member alloc_len.

2001-12-11  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: step version number to 0.11.2.

	* options.op (user-anon-passwd): add missing comma.

	* Makefile.am: reorder BUILT_SOURCES to avoid bootstrapping
	problem.

	* ftp.c (ftp_rmdir): new function.
	* fn_basic.c (fn_rmdir): new function.
	* fntable.fn (rmdir): new function.

	* main.c: move version here from version.c
	version.c: remove file

	* ftp.c (ftp_list): don't update status bar.  Our callers will.

2001-11-18  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* options.op: new option ``user_anon_passwd''.
	* util.c (get_anon_passwd): handle new option.

	* getdomainname.c: removed.

2001-10-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat): rewrite error detection/reporting:
	don't rely on ferror(), only consult errno in case of error.

2001-09-15  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: stepped version to 0.11.1.

2001-09-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tty.c: conditionalize definition of ospeed on HAVE_DECL_OSPEED.
	* getaddrinfo.c: adapt to new define name HAVE_DECL_H_ERRNO.
	* configure.in (LIBS): use NIH_CHECK_DECL to check for h_errno in
	netdb.h and ospeed in termcap.h.
	* acinclude.m4 (NIH_CEHCK_DECL): new macro.

2001-09-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: stepped version to 0.11.

2001-08-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.h: only declare tags in header, don't define it.
	* tty.h: only declare tty_am in header, don't define it.

	* sockets.c (sockaddr_ntop): choose implementation based on
	availability of getnameinfo.
	* configure.in: check for availability of getnameinfo.

	* signals.c (sig_remember): reinstall signal handler.
