@@ -2,7 +2,7 @@
 #define HAD_FTP_H
 
 /*
-  $NiH$
+  $NiH: ftp.h,v 1.18 2001/12/11 14:37:32 dillo Exp $
 
   ftp.h -- ftp protocol functions
   Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001 Dieter Baron
@@ -42,27 +42,29 @@ extern char *ftp_pcwd;
 
 
 
-void ftp_init(void);
-int ftp_open(char *host, char *port);
-int ftp_login(char *user, char *pass);
-int ftp_reconnect(void);
+int ftp_anon(void);
+int ftp_cat(FILE *fin, FILE *fout, long start, long size, int upload);
+directory *ftp_cd(char *wd, int force);
 int ftp_close(void);
 int ftp_cwd(char *path);
-char *ftp_host(void);
-char *ftp_prt(void);
-char *ftp_user(void);
-char *ftp_pass(void);
-int ftp_anon(void);
-directory *ftp_list(char *path);
-directory *ftp_cd(char *wd, int force);
-FILE *ftp_retr(char *file, int mode, long *startp, long *sizep);
-FILE *ftp_stor(char *file, int mode);
 int ftp_fclose(FILE *f);
-int ftp_mkdir(char *path);
-int ftp_site(char *cmd);
-int ftp_noop(void);
-char *ftp_pwd(void);
 char *ftp_gets(FILE *f);
-int ftp_cat(FILE *fin, FILE *fout, long start, long size, int upload);
+void ftp_hist(char *line);
+void ftp_histf(char *fmt, ...);
+char *ftp_host(void);
+void ftp_init(void);
+directory *ftp_list(char *path);
+int ftp_login(char *user, char *pass);
+int ftp_mkdir(char *path);
+int ftp_open(char *host, char *port);
+int ftp_noop(void);
+char *ftp_pass(void);
+char *ftp_prt(void);
+char *ftp_pwd(void);
+int ftp_reconnect(void);
+FILE *ftp_retr(char *file, int mode, long *startp, long *sizep);
+int ftp_site(char *cmd);
+FILE *ftp_stor(char *file, int mode);
+char *ftp_user(void);
 
 #endif /* ftp.h */
